[package]
name = "zatch"
version = "0.1.0"
authors = ["nico <nazucca7@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "zatch"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
embedded-svc = { version = "0.28", default-features = false }
anyhow = "1.0"
gc9a01-rs = "0.4.1"
esp-idf-hal = { version = "0.44.1" }
embedded-graphics = "0.8.1"
# cstr_core = "0.2.1"
# lvgl = { version = "0.6.2", default-features = false, features = ["embedded_graphics", "unsafe_no_autoinit"] }
# lvgl-sys = { version = "0.6.2" }

# esp-idf-hal = { git="https://github.com/esp-rs/esp-idf-hal"}
# esp-idf-svc = { git="https://github.com/esp-rs/esp-idf-svc"}

# [patch.crates-io]
# esp-idf-hal = { git="https://github.com/esp-rs/esp-idf-hal"}
# esp-idf-svc = { git="https://github.com/esp-rs/esp-idf-svc"}

[build-dependencies]
embuild = "0.32.0"
